mtls.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: webapps
spec:
  mtls:
    mode: STRICT
