Destination.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: reviews
spec:
  host: reviews
  subsets:
  - name: v1
    labels:
      version: v1s
  - name: v2
    labels:
      version: v2
  - name: v3
    labels: 
      version: v3
